# task_app_tracker

./: .gitignore
.github/workflows/: build.yml
chore_sync_app/: README.md  pubspec.yaml
chore_sync_app/integration_test/: simple_test.dart
chore_sync_app/lib/: main.dart
chore_sync_app/lib/providers/: app_state.dart
chore_sync_app/lib/screens/: adult_dashboard.dart  kid_dashboard.dart
chore_sync_app/lib/src/rust/: frb_generated.dart
chore_sync_app/lib/widgets/: svg_sprite.dart
chore_sync_app/rust/: Cargo.toml
chore_sync_app/rust/src/: lib.rs
chore_sync_app/rust/src/crud/: activities.rs  chores.rs  mod.rs  rewards.rs
chore_sync_app/rust/src/db/: mod.rs  models.rs  schema.rs
chore_sync_app/rust/src/sync/: engine.rs  mod.rs  payloads.rs
chore_sync_app/rust_builder/: pubspec.yaml
chore_sync_app/rust_builder/android/: build.gradle  settings.gradle
chore_sync_app/rust_builder/android/src/main/: AndroidManifest.xml
chore_sync_app/rust_builder/ios/: rust_lib_chore_sync_app.podspec
chore_sync_app/rust_builder/linux/: CMakeLists.txt
chore_sync_app/rust_builder/macos/: rust_lib_chore_sync_app.podspec
chore_sync_app/rust_builder/windows/: CMakeLists.txt
