[package]
name = "rust_lib_chore_sync_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
aes-gcm = "0.10.3"
chrono = "0.4.44"
flutter_rust_bridge = "=2.12.0"
hex = "0.4.3"
lazy_static = "1.5.0"
rand = "0.10.1"
rusqlite = "0.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
uuid = { version = "1.23.0", features = ["v4"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
